# eventdbx-php

./: .gitignore  LICENSE  README.md  composer.json  phpunit.xml
.github/workflows/: ci.yml  release.yml
native/: Cargo.toml
native/src/: lib.rs
src/: Client.php
src/Exception/: EventDbxException.php
tests/: ClientTest.php
tests/Fixtures/: eventdbx_native_stub.c
