[package]
name = "eventdbx-php-native"
version = "0.1.0"
edition = "2021"
description = "Native FFI bridge for the EventDBX PHP SDK"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
eventdbx-client = { path = "../../eventdbx-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
